--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<%= yield %>
-
-<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= render "shared/header" %>
+  <%= yield %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </body>
 </html>
