--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -2,4 +2,15 @@
   width :100%;
   height: 100px;
   background: #ccc;
+
+  ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+
+    li {
+      margin-right: 15px;
+    }
+  }
 }
