--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,16 +1,29 @@
 .l-header {
   width :100%;
-  height: 100px;
-  background: #ccc;
+  height: 50px;
+  background: #434343;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   ul {
     margin: 0;
     padding: 0;
     display: flex;
     list-style: none;
+    align-items: center;
+    justify-content: center;
 
     li {
       margin-right: 15px;
+
+      a {
+        text-decoration: none;
+        color: #FFF;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 13px;
+      }
     }
   }
 }
