Feat: Widgets list refactor

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -9,6 +9,18 @@ body {
   font-weight: 300;
 }
 
+#main {
+  display: flex;
+
+  > .container {
+    width: 100%;
+
+    .wrapper {
+      width: 100%;
+    }
+  }
+}
+
 *,
 *:before,
 *:after {
