Base admin interface

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,14 @@
   "settings",
   "base",
   "layouts/*",
-  "components/**/*";
+  "components/**/*",
+  "bootstrap";
+
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
