--- a/app/views/admin/sites/show.html.erb
+++ b/app/views/admin/sites/show.html.erb
@@ -1,2 +1,12 @@
+<p>
+  <strong>Name:</strong>
+  <%= @site.name %>
+</p>
+
+<p>
+  <strong>Site template:</strong>
+  <%= @site.site_template.name %>
+</p>
+
 <%= link_to 'Edit', edit_admin_site_path(@site), class: 'btn btn-primary' %>
 <%= link_to 'Back', admin_sites_path, class: 'btn btn-secondary' %>
