--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Admin Route', new_admin_route_path %>
+<%= link_to 'New Admin Route', new_admin_route_path, class: 'btn btn-primary' %>
