--- a/app/views/admin/site_templates/index.html.erb
+++ b/app/views/admin/site_templates/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Site Template', new_admin_site_template_path %>
+<%= link_to 'New Site Template', new_admin_site_template_path, class: 'btn btn-primary' %>
