--- a/app/views/admin/site_templates/show.html.erb
+++ b/app/views/admin/site_templates/show.html.erb
@@ -3,5 +3,5 @@
   <%= @site_template.name %>
 </p>
 
-<%= link_to 'Edit', edit_admin_site_template_path(@site_template) %> |
-<%= link_to 'Back', admin_site_templates_path %>
+<%= link_to 'Edit', edit_admin_site_template_path(@site_template), class: 'btn btn-primary' %>
+<%= link_to 'Back', admin_site_templates_path, class: 'btn btn-secondary' %>
