--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -3,7 +3,7 @@
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-    <%= link_to ForestAtlasLandscapeCms::Application.config.site_name, admin_url, class: 'navbar-brand'%>
+    <%= link_to 'Site Administration', admin_url, class: 'navbar-brand'%>
     <% if user_signed_in? %>
         <ul class="nav navbar-nav">
           <li class="nav-item"><%= link_to 'Users', admin_users_path, {class: current_class('admin/users') + 'nav-link'} %></li>
