basic logic and styles for admin page

--- a/app/views/static/admin.html.erb
+++ b/app/views/static/admin.html.erb
@@ -1,4 +1,25 @@
-<h1>Admin</h1>
+<div class="l-admin">
 
-<table class="table table-bordered">
-</table>
+  <div class="c-header">
+    <div class="c-title">
+      <h2>create</h2>
+    </div>
+  </div>
+
+  <div id="content">
+
+    <div class="c-tabs">
+      <div class="tab" data-type="sites">sites</div>
+      <div class="tab" data-type="users">users</div>
+    </div>
+
+    <div id="tab-content" class="tab-content"></div>
+
+    <div id="table" class="table-content">
+      <div id="js--filter" class="filters"></div>
+      <div id="js--table" class="table-container"></div>
+    </div>
+
+  </div>
+
+</div>
