--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,10 @@
 @import
+  "bootstrap",
   "leaflet",
   "settings",
   "base",
   "layouts/*",
-  "components/**/*",
-  "bootstrap";
+  "components/**/*";
 
 body {
   padding-top: 20px;
