Fix homepage templates

--- a/app/views/site_page/show.html.erb
+++ b/app/views/site_page/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= @page.name %></h1>
-<%= @page.content.html_safe unless @page.content.blank? %>
+<h1><%= @site_page.name %></h1>
+<%= @site_page.content.html_safe unless @site_page.content.blank? %>
