--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -1,3 +1,3 @@
 <h1>Map</h1>
-<h3><%= @page.name %></h3>
-<%= @page.content.html_safe unless @page.content.blank? %>
+<h3><%= @site_page.name %></h3>
+<%= @site_page.content.html_safe unless @site_page.content.blank? %>
