--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -4,6 +4,8 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Site</th>
+      <th>URL</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +14,8 @@
     <% @pages.each do |site_page| %>
       <tr>
         <td><%= site_page.name %></td>
+        <td><%= site_page.site.name %></td>
+        <td><%= site_page.url %></td>
         <td><%= link_to 'Show', management_site_page_path(site_page) %></td>
         <td><%= link_to 'Edit', edit_management_site_page_path(site_page) %></td>
         <td><%= link_to 'Destroy', management_site_page_path(site_page), method: :delete, data: { confirm: 'Are you sure?' } %></td>
