--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -6,11 +6,12 @@
     <%= link_to 'Content Management', management_url, class: 'navbar-brand'%>
     <% if user_signed_in? %>
         <ul class="nav navbar-nav">
-          <li class="nav-item"><%= link_to 'Pages', management_site_pages_path, {class: current_class('management/site_pages') + 'nav-link'} %></li>
-          <li class="nav-item"><%= link_to 'Sites', management_sites_path, {class: current_class('management/sites') + 'nav-link'} %></li>
         </ul>
         <ul class="nav navbar-nav pull-xs-right">
-          <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, {class: 'nav-link', :method => :delete} %></li>
+          <% if current_user.admin? %>
+              <li class="nav-item"><%= link_to 'Admin interface', admin_path, {class: 'nav-link'} %></li>
+          <% end %>
+        <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, {class: 'nav-link', :method => :delete} %></li>
         </ul>
     <% end %>
   </div>
