Comments and improves the code
* Fixes an issue where a c-tabs element would be nested in another one, leading to an additional step at instantiation (_generateContainer)
* Manages the current tab with an index instead of a string, leading to simplifications

--- a/app/assets/javascripts/templates/shared/tabs.hbs
+++ b/app/assets/javascripts/templates/shared/tabs.hbs
@@ -1,7 +1,3 @@
-<div class="c-tabs {{cssClass}}">
-  {{#each tabs}}
-    <div class="tab" data-tab="{{this}}">
-      {{this}}
-    </div>
-  {{/each}}
-</div>
+{{#each tabs}}
+  <li class="tab">{{this}}</li>
+{{/each}}
