Adds the CSS structure and updates the architecture

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,16 +1,7 @@
 @import
-  "leaflet",
-  "settings",
-  "base",
-  "layouts/*",
-  "components/**/*",
-  "bootstrap";
-
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.navbar {
-  margin-bottom: 20px;
-}
+'leaflet',
+'bootstrap',
+'settings',
+'base',
+'layouts/*',
+'components/**/*';
