--- a/app/views/management/site_pages/show.html.erb
+++ b/app/views/management/site_pages/show.html.erb
@@ -1,33 +1,34 @@
-<p>
-  <strong>Name:</strong>
-  <%= @site_page.name %>
-</p>
+<div class="wrapper">
+  <p>
+    <strong>Name:</strong>
+    <%= @site_page.name %>
+  </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @site_page.description %>
-</p>
+  <p>
+    <strong>Description:</strong>
+    <%= @site_page.description %>
+  </p>
 
-<p>
-  <strong>Content:</strong>
-  <%= @site_page.content.html_safe unless @site_page.content.nil? %>
-</p>
+  <p>
+    <strong>Content:</strong>
+    <%= @site_page.content.html_safe unless @site_page.content.nil? %>
+  </p>
 
-<p>
-  <strong>Page site:</strong>
-  <%= @site_page.site.name %>
-</p>
+  <p>
+    <strong>Page site:</strong>
+    <%= @site_page.site.name %>
+  </p>
 
-<p>
-  <strong>URL:</strong>
-  <%= @site_page.url%>
-</p>
+  <p>
+    <strong>URL:</strong>
+    <%= @site_page.url%>
+  </p>
 
-<p>
-  <strong>Link:</strong>
-  <%= link_to @site_page.links(request.port).first, @site_page.links(request.port).first, target: '_blank' %>
-</p>
+  <p>
+    <strong>Link:</strong>
+    <%= link_to @site_page.links(request.port).first, @site_page.links(request.port).first, target: '_blank' %>
+  </p>
 
-
-<%= link_to 'Edit', edit_management_site_page_path(@site_page), class: 'btn btn-primary' %>
-<%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site_page.site.slug}, class: 'btn btn-secondary' %>
+  <%= link_to 'Edit', edit_management_site_page_path(@site_page), class: 'btn btn-primary' %>
+  <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site_page.site.slug}, class: 'btn btn-secondary' %>
+</div>
