--- a/app/views/management/static_page/dashboard.html.erb
+++ b/app/views/management/static_page/dashboard.html.erb
@@ -1,20 +1,20 @@
-<h1>Select a site</h1>
+<div class="wrapper">
+  <h1>Select a site</h1>
 
-<table class="table table-bordered">
-  <thead>
-  <tr>
-    <th>Name</th>
-  </tr>
-  </thead>
+  <table class="table table-bordered">
+    <thead>
+    <tr>
+      <th>Name</th>
+    </tr>
+    </thead>
 
-  <tbody>
-  <% @sites.each do |site| %>
-      <tr>
-        <td><%= link_to site.name, controller: 'management/site_pages', action: 'index', site_slug: site.slug %></td>
-      </tr>
-  <% end %>
-  </tbody>
-</table>
-
-<br>
+    <tbody>
+    <% @sites.each do |site| %>
+        <tr>
+          <td><%= link_to site.name, controller: 'management/site_pages', action: 'index', site_slug: site.slug %></td>
+        </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
 
