--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,28 +1,44 @@
-html {
-  font-size: 100%;
+* {
   box-sizing: border-box;
-}
 
-body {
-  margin: 0;
-  font-family: 'Helvetica';
-  font-weight: 300;
-}
-
-#main {
-  display: flex;
-
-  > .container {
-    width: 100%;
-
-    .wrapper {
-      width: 100%;
-    }
+  &::before,
+  &::after {
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  max-width: $body-max-width;
+  color: $color-4;
+  font-family: $font-family-1;
+  font-size: $font-size-normal;
+  font-weight: $font-weight-normal;
+
+  @media #{$mq-body-width} {
+    margin: 0 auto;
+  }
+}
+
+.wrapper {
+  padding: 0 $wrapper-mobile-padding;
+
+  @media #{$mq-mobile} {
+    padding: 0 $wrapper-tablet-padding;
+  }
+
+  @media #{$mq-tablet} {
+    padding: 0 $wrapper-padding;
+  }
+}
+
+.turbolinks-progress-bar {
+  background-color: $color-2;
 }
