--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title><%= ForestAtlasLandscapeCms::Application.config.site_name %> - Content Management</title>
   <%= csrf_meta_tags %>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
-<div class="container-fluid">
+<div class="wrapper">
   <%= render 'management/header' %>
   <%= render 'shared/messages' %>
-  <%= yield %>
 </div>
+<%= yield %>
 </body>
 </html>
