--- a/app/views/management/site_pages/edit.html.erb
+++ b/app/views/management/site_pages/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Editing Page</h1>
+<div class="wrapper">
+  <h1>Editing Page</h1>
 
-<%= render 'form', site_page: @site_page %>
+  <%= render 'form', site_page: @site_page %>
+</div>
