--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -1,29 +1,31 @@
-<h1>Pages</h1>
+<div class="wrapper">
+  <h1>Pages</h1>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Site</th>
-      <th>URL</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pages.each do |site_page| %>
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= site_page.name %></td>
-        <td><%= site_page.site.name %></td>
-        <td><%= site_page.url %></td>
-        <td><%= link_to 'Show', management_site_page_path(site_page) %></td>
-        <td><%= link_to 'Edit', edit_management_site_page_path(site_page) %></td>
-        <td><%= link_to 'Destroy', management_site_page_path(site_page), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Site</th>
+        <th>URL</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @pages.each do |site_page| %>
+        <tr>
+          <td><%= site_page.name %></td>
+          <td><%= site_page.site.name %></td>
+          <td><%= site_page.url %></td>
+          <td><%= link_to 'Show', management_site_page_path(site_page) %></td>
+          <td><%= link_to 'Edit', edit_management_site_page_path(site_page) %></td>
+          <td><%= link_to 'Destroy', management_site_page_path(site_page), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Page', new_management_site_site_page_path, class: 'btn btn-primary' %>
+  <br>
+
+  <%= link_to 'New Page', new_management_site_site_page_path, class: 'btn btn-primary' %>
+</div>
