Makes several improvements to the tabs component & adds it into the management pages
* Allows redirections
* Makes the tabs kinda responsive
* Removes unused code from the tab component.

--- a/app/assets/javascripts/templates/shared/tabs.hbs
+++ b/app/assets/javascripts/templates/shared/tabs.hbs
@@ -1,3 +1,5 @@
-{{#each tabs}}
-  <li class="tab" role="tab" aria-controls="{{id}}">{{name}}</li>
-{{/each}}
+<ul class="c-tabs">
+  {{#each tabs}}
+    <li class="tab" role="tab" {{#if id}}aria-controls="{{id}}"{{/if}}>{{name}}</li>
+  {{/each}}
+</ul>
