--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse" style="margin-bottom: 20px;">
+<nav class="navbar navbar-dark bg-inverse">
   <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
     &#9776;
   </button>
