Add site name to management section header

--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -3,7 +3,12 @@
     &#9776;
   </button>
   <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-    <%= link_to 'Content Management', management_url, class: 'navbar-brand'%>
+    <%= link_to 'Content Management', management_url, class: 'navbar-brand' %>
+    <% unless @site.nil? %>
+        <h2 class="navbar-brand">
+          <%= link_to @site.name, {controller: 'management/site_pages', action: 'index', site_slug: @site.slug} %>
+        </h2>
+    <% end %>
     <% if user_signed_in? %>
         <ul class="nav navbar-nav">
         </ul>
@@ -11,7 +16,7 @@
           <% if current_user.admin? %>
               <li class="nav-item"><%= link_to 'Admin interface', admin_path, {class: 'nav-link'} %></li>
           <% end %>
-        <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, {class: 'nav-link', :method => :delete} %></li>
+          <li class="nav-item"><%= link_to 'Logout', destroy_user_session_path, {class: 'nav-link', :method => :delete} %></li>
         </ul>
     <% end %>
   </div>
