--- a/app/views/management/site_pages/_form.html.erb
+++ b/app/views/management/site_pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:management, site_page]) do |f| %>
+<%= form_for([:management, :site, site_page]) do |f| %>
     <% if site_page.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(site_page.errors.count, "error") %> prohibited this site_page from being saved:</h2>
@@ -54,7 +54,7 @@
       <div class="col-sm-offset-2 col-sm-10">
         <%= f.submit class: 'btn btn-primary' %>
         <%= link_to 'Show', management_site_page_path(site_page), class: 'btn btn-secondary' unless site_page.id.nil? %>
-        <%= link_to 'Back', management_site_pages_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Back', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug}, class: 'btn btn-secondary' %>
       </div>
     </div>
 <% end %>
