--- a/app/views/management/site_pages/new.html.erb
+++ b/app/views/management/site_pages/new.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
   <h1>New Page</h1>
 
-  <%= render 'form', site_page: @site_page %>
+  <%= render 'form', site_page: @site_page, form_for_path: [:management, :site, @site_page]%>
 </div>
