Creates the basic table component

--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -14,6 +14,9 @@
 
 <div class="l-page-list">
   <div class="wrapper">
+
+    <div class="js-table"></div>
+
     <table class="c-table">
       <tr class="header">
         <th>Name</th>
