--- a/app/assets/javascripts/templates/shared/table.hbs
+++ b/app/assets/javascripts/templates/shared/table.hbs
@@ -1,24 +1,27 @@
-<table class="c-table">
+<table class="c-table" role="grid" aria-readonly="true">
+  <caption>
+    {{tableName}}, sorted by {{sortColumn}}: {{sortOrder}}
+  </caption>
   {{#if error}}
     <tr class="error">
       <td>{{error}}</td>
     </tr>
   {{else}}
     {{#if headers}}
-      <tr class="header">
+      <tr class="header js-header" role="rowheader">
         {{#each headers}}
-          <th>{{this}}</th>
+          <th class="-order-{{sort}}" aria-sort="{{#if sort}}{{sort}}{{else}}none{{/if}}" tabindex="{{#if sort}}0{{else}}-1{{/if}}" role="columnheader">{{name}}</th>
         {{/each}}
       </tr>
     {{else}}
-      <tr class="no-data">
-        <td>No data</td>
+      <tr class="no-data" role="row">
+        <td role="gridcell">No data</td>
       </tr>
     {{/if}}
     {{#each rows}}
-      <tr>
+      <tr role="row">
         {{#each this}}
-          <td>{{#if html}}{{{html}}}{{else}}{{value}}{{/if}}</td>
+          <td role="gridcell">{{#if html}}{{{html}}}{{else}}{{value}}{{/if}}</td>
         {{/each}}
       </tr>
     {{/each}}
