Adds the possibility to specify an empty div that will hold a search field

--- a/app/assets/javascripts/templates/shared/table.hbs
+++ b/app/assets/javascripts/templates/shared/table.hbs
@@ -24,6 +24,16 @@
           <td role="gridcell">{{#if html}}{{{html}}}{{else}}{{value}}{{/if}}</td>
         {{/each}}
       </tr>
+    {{else}}
+      {{#if isSearchResult}}
+        <tr class="no-result" role="row">
+          <td role="gridcell">No result</td>
+        </tr>
+      {{else}}
+        <tr class="no-data" role="row">
+          <td role="gridcell">No data</td>
+        </tr>
+      {{/if}}
     {{/each}}
   {{/if}}
 </table>
