Styles the search field

--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -15,7 +15,7 @@
 <div class="l-page-list">
   <div class="wrapper">
 
-    <div class="js-table-search"></div>
+    <div class="c-input-search js-table-search"></div>
     <div class="js-table"></div>
 
     <table class="c-table">
