--- a/app/assets/stylesheets/front/_settings-theme-2.scss
+++ b/app/assets/stylesheets/front/_settings-theme-2.scss
@@ -41,6 +41,9 @@ $color-3:  #fff;
 $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
+$color-7:  #3b3b3b;
+$color-8:  #f5f4f4;
+$color-9:  #eceaea;
 
 // General layout
 $body-max-width:         1280px;
