--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,13 @@
   <title><%= ForestAtlasLandscapeCms::Application.config.site_name %></title>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag 'front/application-theme-2', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'front/application-theme-1', media: 'all', 'data-turbolinks-track': 'reload' %>
+
 </head>
 
 <body>
+  <%= render 'front/menu' %>
   <%= render 'front/icons' %>
-  <%= render 'shared/menu' %>
   <%= yield %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </body>
