--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -1,3 +1,7 @@
 <h1>Analysis dashboard</h1>
 <h3><%= @site_page.name %></h3>
 <%= @site_page.content.html_safe unless @site_page.content.blank? %>
+
+<script type="text/javascript">
+  window.route = 'Dashboard';
+</script>
