--- a/app/views/site_page/dynamic_indicator_dashboard.html.erb
+++ b/app/views/site_page/dynamic_indicator_dashboard.html.erb
@@ -1,3 +1,7 @@
 <h1>Dynamic indicator dashboard</h1>
 <h3><%= @site_page.name %></h3>
 <%= @site_page.content.html_safe unless @site_page.content.blank? %>
+
+<script type="text/javascript">
+  window.route = 'DynamicIndicator';
+</script>
