--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,3 +1,7 @@
 <h1>Open content</h1>
 <h3><%= @site_page.name %></h3>
 <%= @site_page.content.html_safe unless @site_page.content.blank? %>
+
+<script type="text/javascript">
+  window.route = 'OpenContent';
+</script>
