--- a/app/assets/stylesheets/front/_settings-theme-2.scss
+++ b/app/assets/stylesheets/front/_settings-theme-2.scss
@@ -34,7 +34,7 @@ $font-weight-normal: 400;
 $font-weight-bold:   700;
 
 // Colors
-$color-1:  #f7f7f7;
+$color-1:  #333;
 $color-2:  #97bd3d;
 $color-3:  #fff;
 $color-4:  #555;
