--- a/app/assets/stylesheets/front/_settings-theme-1.scss
+++ b/app/assets/stylesheets/front/_settings-theme-1.scss
@@ -1,3 +1,4 @@
+// Fira Sans
 @font-face {
   font-family: 'Fira Sans';
   font-weight: 300;
@@ -16,8 +17,28 @@
   src: font-url('fonts/FiraSansOT-Medium.otf');
 }
 
+// Merriweather
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 300;
+  src: font-url('fonts/Merriweather/Merriweather-Light.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 400;
+  src: font-url('fonts/Merriweather/Merriweather-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 700;
+  src: font-url('fonts/Merriweather/Merriweather-Bold.ttf');
+}
+
 // Font families
 $font-family-1: 'Fira Sans', sans-serif;
+$font-family-2: 'Merriweather', sans-serif;
 
 // Font sizes
 $font-size-small:    12px;
@@ -34,7 +55,7 @@ $font-weight-normal: 400;
 $font-weight-bold:   700;
 
 // Colors
-$color-1:  #f7f7f7;
+$color-1:  #006a80;
 $color-2:  #97bd3d;
 $color-3:  #fff;
 $color-4:  #555;
