--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -2,6 +2,8 @@
 <h3><%= @site_page.name %></h3>
 <%= @site_page.content.html_safe unless @site_page.content.blank? %>
 
+<%= render 'front/footer'%>
+
 <script type="text/javascript">
   window.route = 'Homepage';
 </script>
