--- a/app/assets/stylesheets/front/_settings-theme-2.scss
+++ b/app/assets/stylesheets/front/_settings-theme-2.scss
@@ -41,6 +41,7 @@ $color-4:  #555;
 
 // General layout
 $body-max-width:         1280px;
+$content-max-width:       750px;
 $wrapper-padding:          80px;
 $wrapper-tablet-padding:   30px;
 $wrapper-mobile-padding:   15px;
