Feature/css js architecture (#34)
* Separates the JS in 3 bundles: admin, management & front

* Splits the CSS in 3 bundles: admin, management & front

* Forces folder views/front to exist in origin

* Created the empty folder javascripts/routers/admin

* Corrected mispelling of a file

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title><%= ForestAtlasLandscapeCms::Application.config.site_name %> - Site Administration</title>
   <%= csrf_meta_tags %>
-
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= stylesheet_link_tag 'admin/application', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
 <div class="container-fluid">
   <%= render 'admin/header' %>
   <%= render 'shared/messages' %>
   <%= yield %>
+  <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
 </div>
 </body>
 </html>
