--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -4,13 +4,13 @@
   <title><%= ForestAtlasLandscapeCms::Application.config.site_name %> - Content Management</title>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'management/application', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
 <div class="wrapper">
   <%= render 'management/header' %>
   <%= render 'shared/messages' %>
+  <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
 </div>
 <%= yield %>
 </body>
