--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -9,12 +9,36 @@
     <div class="share">
       <span class="share-text">Share the Atlas</span>
       <ul class="share-links-list">
-        <li class="share-link-item"><a class="share-link -facebook" href="#" target="_blank"></a></li>
-        <li class="share-link-item"><a class="share-link -twitter" href="#" target="_blank"></a></li>
-        <li class="share-link-item"><a class="share-link -googleplus" href="#" target="_blank"></a></li>
-        <li class="share-link-item"><a class="share-link -pinterest" href="#" target="_blank"></a></li>
-        <li class="share-link-item"><a class="share-link -linkedin" href="#" target="_blank"></a></li>
-        <li class="share-link-item"><a class="share-link -tumblr" href="#" target="_blank"></a></li>
+        <li class="share-link-item">
+          <a class="share-link -facebook" href="#" target="_blank">
+            <svg class="icon icon-Facebook"><use xlink:href="#icon-Facebook"></use></svg>
+          </a>
+        </li>
+        <li class="share-link-item">
+          <a class="share-link -twitter" href="#" target="_blank">
+            <svg class="icon icon-Twitter"><use xlink:href="#icon-Twitter"></use></svg>
+          </a>
+        </li>
+        <li class="share-link-item">
+          <a class="share-link -googleplus" href="#" target="_blank">
+            <svg class="icon icon-Google"><use xlink:href="#icon-Google"></use></svg>
+          </a>
+        </li>
+        <li class="share-link-item">
+          <a class="share-link -pinterest" href="#" target="_blank">
+            <svg class="icon icon-Pinterest"><use xlink:href="#icon-Pinterest"></use></svg>
+          </a>
+        </li>
+        <li class="share-link-item">
+          <a class="share-link -linkedin" href="#" target="_blank">
+            <svg class="icon icon-Linkedin"><use xlink:href="#icon-Linkedin"></use></svg>
+          </a>
+        </li>
+        <li class="share-link-item">
+          <a class="share-link -tumblr" href="#" target="_blank">
+            <svg class="icon icon-Tumblr"><use xlink:href="#icon-Tumblr"></use></svg>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
