--- a/app/assets/stylesheets/management/applicaction.scss
+++ b/app/assets/stylesheets/management/applicaction.scss
@@ -1,8 +1,8 @@
 @import
 'leaflet',
-'icons',
-'settings-theme-1',
+'bootstrap',
+'settings',
 '../base',
 '../layouts/*',
 '../components/shared/**/*',
-'../components/front/**/*';
+'../components/management/**/*';
