--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,12 @@
 <head>
   <title><%= ForestAtlasLandscapeCms::Application.config.site_name %></title>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag 'front/application-theme-1', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
+  <%= render 'front/icons' %>
   <%= render 'shared/menu' %>
   <%= yield %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
