--- a/app/assets/stylesheets/front/_settings-theme-2.scss
+++ b/app/assets/stylesheets/front/_settings-theme-2.scss
@@ -38,6 +38,7 @@ $color-1:  #333;
 $color-2:  #97bd3d;
 $color-3:  #fff;
 $color-4:  #555;
+$color-5:  #000;
 
 // General layout
 $body-max-width:         1280px;
