--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   height: 500px;
   // image sample. This property should be injected through javascript
-  background-image: asset-url('forest.jpg');
+  background-image: asset-url('cover.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
@@ -31,19 +31,16 @@
   .cover-title {
     max-width: $content-max-width;
     margin: 0 auto;
-
     color: $color-3;
     line-height: 1;
     text-align: center;
 
     @if $theme == 2 {
-      font-family: $font-family-1;
       font-size: $font-size-x-big;
       font-weight: $font-weight-normal;
       letter-spacing: .7px;
       text-transform: uppercase;
     } @else {
-      font-family: $font-family-2;
       font-size: $font-size-huge;
       font-weight: $font-weight-bold;
       letter-spacing: 1.2px;
