--- a/app/assets/stylesheets/front/_settings-theme-2.scss
+++ b/app/assets/stylesheets/front/_settings-theme-2.scss
@@ -16,12 +16,39 @@
   src: font-url('fonts/FiraSansOT-Medium.otf');
 }
 
+// Merriweather
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 300;
+  src: font-url('fonts/Merriweather/Merriweather-Light.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 400;
+  src: font-url('fonts/Merriweather/Merriweather-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-weight: 700;
+  src: font-url('fonts/Merriweather/Merriweather-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  font-weight: 300;
+  src: font-url('fonts/Merriweather/Merriweather-LightItalic.ttf');
+}
+
 // Font families
 $font-family-1: 'Fira Sans', sans-serif;
 
 // Font sizes
 $font-size-small:    12px;
 $font-size-normal:   14px;
+$font-size-s-normal: 15px;
 $font-size-x-normal: 19px;
 $font-size-medium:   21px;
 $font-size-big:      35px;
