Standardizes the colors

--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -34,10 +34,12 @@ $font-weight-normal: 400;
 $font-weight-bold:   700;
 
 // Colors
-$color-1:  #f7f7f7;
-$color-2:  #97bd3d;
+$color-1:  #97bd3d; // Theme main color
+$color-2:  #f7f7f7;
 $color-3:  #fff;
 $color-4:  #555;
+$color-5:  #000;
+$color-6:  #333;
 
 // General layout
 $body-max-width:         1280px;
