--- a/app/assets/stylesheets/front/_settings-theme-1.scss
+++ b/app/assets/stylesheets/front/_settings-theme-1.scss
@@ -32,8 +32,8 @@
 }
 
 // Font families
-$font-family-1: 'Merriweather', sans-serif;
-$font-family-2: 'Merriweather Sans', sans-serif;
+$font-family-1: 'Merriweather Sans', sans-serif;
+$font-family-2: 'Merriweather', serif;
 
 // Font sizes
 $font-size-small:    12px;
