--- a/app/assets/stylesheets/front/application-theme-1.scss
+++ b/app/assets/stylesheets/front/application-theme-1.scss
@@ -2,7 +2,7 @@
 'leaflet',
 'icons',
 'settings-theme-1',
-'../base',
+'base-theme-1',
 '../layouts/*',
 '../components/shared/**/*',
 '../components/front/**/*';
