--- a/app/assets/stylesheets/front/application-theme-2.scss
+++ b/app/assets/stylesheets/front/application-theme-2.scss
@@ -2,7 +2,7 @@
 'leaflet',
 'icons',
 'settings-theme-2',
-'../base',
+'base-theme-2',
 '../layouts/*',
 '../components/shared/**/*',
 '../components/front/**/*';
