--- a/app/assets/stylesheets/components/front/c-content.scss
+++ b/app/assets/stylesheets/components/front/c-content.scss
@@ -15,34 +15,37 @@
 
   .content-title {
     margin: 0 auto 25px;
-    font-size: $font-size-huge;
+    font-size: $font-size-big;
     letter-spacing: .3px;
+
+    @media #{$mq-mobile} {
+      font-size: $font-size-x-big;
+    }
+
+    @media #{$mq-tablet} {
+      font-size: $font-size-huge;
+    }
 
     @if $theme == 2 {
       color: $color-4;
       font-weight: $font-weight-light;
     } @else {
       color: $color-1;
+      font-family: $font-family-2;
       font-weight: $font-weight-bold;
+      line-height: 1.25;
     }
   }
 
   .paragraph {
-    color: $color-4;
     letter-spacing: .1px;
-
-    @if $theme == 2 {
-      line-height: 1.7;
-    } @else {
-      line-height: 2.1;
-      font-family: $font-family-2;
-      font-weight: $font-weight-light;
-      font-size: $font-size-s-normal;
-    }
 
     &.-intro {
       font-size: $font-size-x-normal;
-      font-weight: $font-weight-light;
+
+      @if $theme == 2 {
+        font-weight: $font-weight-light;
+      }
     }
 
     & + .paragraph {
@@ -51,17 +54,28 @@
   }
 
   .quote {
-    margin: 60px auto;
-    font-size: $font-size-big;
+    margin: 30px auto;
+    font-size: $font-size-medium;
     font-weight: $font-weight-light;
 
+    @media #{$mq-mobile} {
+      margin: 60px auto;
+      font-size: $font-size-big;
+    }
+
     @if $theme == 2 {
+      line-height: 1.1;
       color: $color-4;
       letter-spacing: .2px;
-      line-height: 1.1;
     } @else {
       color: $color-1;
+      font-family: $font-family-2;
       font-style: italic;
+      line-height: 1.5;
+
+      @media #{$mq-mobile} {
+        line-height: 1.25;
+      }
     }
   }
 
@@ -72,19 +86,6 @@
 
     @media #{$mq-mobile} {
       margin: 65px 0 80px;
-    }
-  }
-
-  a {
-    color: currentColor;
-
-    @if $theme == 2 {
-      display: inline-block;
-      padding: 0 3px;
-      background-color: rgba($color-1, .2);
-    } @else {
-      color: $color-1;
-      text-decoration: underline;
     }
   }
 }
