--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -4,12 +4,21 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  height: 500px;
+  padding: 30px 0;
   // image sample. This property should be injected through javascript
   background-image: asset-url('cover.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
+
+  @media #{$mq-mobile} {
+    padding: 100px 0;
+  }
+
+  @media #{$mq-tablet} {
+    height: 500px;
+    padding: 0;
+  }
 
   &::after {
     display: block;
@@ -32,20 +41,20 @@
     max-width: $content-max-width;
     margin: 0 auto;
     color: $color-3;
+    font-weight: $font-weight-bold;
     line-height: 1;
     text-align: center;
 
     @if $theme == 2 {
       font-size: $font-size-x-big;
-      font-weight: $font-weight-normal;
       letter-spacing: .7px;
       text-transform: uppercase;
     } @else {
+      font-family: $font-family-2;
       font-size: $font-size-huge;
-      font-weight: $font-weight-bold;
-      letter-spacing: 1.2px;
+      letter-spacing: 1.25px;
 
-      @media #{$mq-laptop} {
+      @media #{$mq-tablet} {
         font-size: $font-size-x-huge;
       }
     }
