--- a/app/assets/stylesheets/front/_base-theme-1.scss
+++ b/app/assets/stylesheets/front/_base-theme-1.scss
@@ -19,8 +19,9 @@ body {
   max-width: $body-max-width;
   color: $color-4;
   font-family: $font-family-1;
-  font-size: $font-size-normal;
-  font-weight: $font-weight-normal;
+  font-size: $font-size-s-normal;
+  font-weight: $font-weight-light;
+  line-height: 2.1;
 
   @media #{$mq-body-width} {
     margin: 0 auto;
@@ -39,7 +40,7 @@ ul {
 }
 
 a {
-  text-decoration: none;
+  color: $color-1;
 }
 
 .wrapper {
