--- a/app/assets/stylesheets/front/_base-theme-2.scss
+++ b/app/assets/stylesheets/front/_base-theme-2.scss
@@ -21,6 +21,7 @@ body {
   font-family: $font-family-1;
   font-size: $font-size-normal;
   font-weight: $font-weight-normal;
+  line-height: 1.7;
 
   @media #{$mq-body-width} {
     margin: 0 auto;
@@ -39,7 +40,11 @@ ul {
 }
 
 a {
+  display: inline-block;
+  padding: 0 3px;
+  color: currentColor;
   text-decoration: none;
+  background-color: rgba($color-1, .2);
 }
 
 .wrapper {
