Brings modifications to the public sites
* Reduces the padding of the wrapper on desktop
* Reduces the max-size of the images
* Removes the "inline-block" properties on the links of theme 2
* Increases the top padding of the cover component on mobile
* Fixes an issue with the Backbone routers

--- a/app/assets/stylesheets/components/front/c-content.scss
+++ b/app/assets/stylesheets/components/front/c-content.scss
@@ -80,12 +80,14 @@
   }
 
   .image {
+    display: block;
     width: 100%;
     height: auto;
     margin: 35px 0 50px;
+    max-width: $media-max-width;
 
     @media #{$mq-mobile} {
-      margin: 65px 0 80px;
+      margin: 65px auto 80px;
     }
   }
 }
