--- a/app/assets/stylesheets/front/_settings-theme-1.scss
+++ b/app/assets/stylesheets/front/_settings-theme-1.scss
@@ -65,7 +65,8 @@ $color-9:  #eceaea;
 // General layout
 $body-max-width:         1280px;
 $content-max-width:       750px;
-$wrapper-padding:          80px;
+$media-max-width:        1060px;
+$wrapper-padding:          30px;
 $wrapper-tablet-padding:   30px;
 $wrapper-mobile-padding:   15px;
 
