--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -4,7 +4,7 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  padding: 30px 0;
+  padding: 50px 0 30px 0;
   // image sample. This property should be injected through javascript
   background-image: asset-url('cover.jpg');
   background-repeat: no-repeat;
